--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -210,7 +210,7 @@
             return;
         }
 
-        // Виконання AJAX запиту для реєстрації користувача
+        // Виконання AJAX запиту для userDetails користувача
         fetch(`${url}/users/get-user`, {
             method: 'GET',
             headers: {
