--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -112,7 +112,8 @@
             headers: {
                 'Content-Type': 'application/json'
             },
-            body: JSON.stringify(registrationData)
+            body: JSON.stringify(registrationData),
+            credentials: 'include' // Додаємо cookies у запит
         })
             .then(response => {
                 if (!response.ok) {
@@ -120,15 +121,10 @@
                         throw new Error(`Код помилки: ${response.status}. Повідомлення: ${errorMessage}`);
                     });
                 }
-                return response.json();
+                return response.text();
             })
-            .then(data => {
-                if (data.token) {
-                    localStorage.setItem('token', data.token); // Зберігаємо токен у localStorage
-                    serverResponse.textContent = 'Реєстрація успішна! Токен: ' + data.token;
-                } else {
-                    serverResponse.textContent = 'Помилка при реєстрації. Спробуйте ще раз.';
-                }
+            .then(message => {
+                serverResponse.textContent = 'Реєстрація успішна! ' + message;
             })
             .catch(error => {
                 serverResponse.textContent = 'Помилка: ' + error.message; // Відображаємо текст помилки
@@ -164,7 +160,8 @@
             headers: {
                 'Content-Type': 'application/json'
             },
-            body: JSON.stringify(loginData)
+            body: JSON.stringify(loginData),
+            credentials: 'include' // Додаємо cookies у запит
         })
             .then(response => {
                 if (!response.ok) {
@@ -172,15 +169,10 @@
                         throw new Error(`Код помилки: ${response.status}. Повідомлення: ${errorMessage}`);
                     });
                 }
-                return response.json();
+                return response.text();
             })
-            .then(data => {
-                if (data.token) {
-                    localStorage.setItem('token', data.token); // Зберігаємо токен у localStorage
-                    serverResponse.textContent = 'залогінення успішне! Токен: ' + data.token;
-                } else {
-                    serverResponse.textContent = 'Помилка при залогіненні. Спробуйте ще раз.';
-                }
+            .then(message => {
+                serverResponse.textContent = 'Залогінення успішне! ' + message;
             })
             .catch(error => {
                 serverResponse.textContent = 'Помилка: ' + error.message; // Відображаємо текст помилки
@@ -201,23 +193,14 @@
         const email = document.getElementById('email-user-details');
         const yearsOld = document.getElementById('yearsOld-user-details');
 
-        // Отримати токен з локального сховища
-        const token = localStorage.getItem('token');
-
-        // Перевірка на наявність токену
-        if (!token) {
-            serverResponse.textContent = 'Токен відсутній. Будь ласка, залогіньтесь.';
-            return;
-        }
-
-        // Виконання AJAX запиту для реєстрації користувача
+        // Виконання AJAX запиту для userDetails користувача
         fetch(`${url}/users/get-user`, {
             method: 'GET',
             headers: {
                 'Content-Type': 'application/json',
-                // Додати токен у заголовок запиту
-                'Authorization': `Bearer ${token}`
-            }
+                // Токен автоматично надається через cookie, тому додавати його вручну не потрібно
+            },
+            credentials: 'include' // Важливо, щоб cookie передавався з запитом
         })
             .then(response => {
                 if (!response.ok) {
@@ -249,27 +232,15 @@
     (function playIntervalRefreshToken(){
         setInterval(() => {
             refreshToken()
-        }, 1000 * 50 * 60 * 1)
+        // }, 1000 * 50 * 60 * 1)
+        }, 1000 * 50 * 1)
     })();
 
     function  refreshToken(){
-        // Отримати токен з локального сховища
-        const token = localStorage.getItem('token');
-
-        // Перевірка на наявність токену
-        if (!token) {
-            serverResponse.textContent = 'Токен не знайдено, будь ласка, увійдіть знову.';
-            return;
-        }
-
         // Виконання AJAX запиту для оновлення токену користувача
         fetch(`${url}/auth/refresh-token`, {
             method: 'GET',
-            headers: {
-                'Content-Type': 'application/json',
-                // Додати токен у заголовок запиту
-                'Authorization': `Bearer ${token}`
-            }
+            credentials: 'include' // Додаємо cookies у запит
         })
             .then(response => {
                 if (!response.ok) {
@@ -277,18 +248,15 @@
                         throw new Error(`Код помилки: ${response.status}. Повідомлення: ${errorMessage}`);
                     });
                 }
-                return response.json();
+                return response.text();
             })
-            .then(data => {
-                if (data.token) {
-                    localStorage.setItem('token', data.token); // Зберігаємо токен у localStorage
-                    serverResponse.textContent = 'оновлений Токен: ' + data.token;
-                } else {
-                    serverResponse.textContent = 'Помилка при оновленні токену. Спробуйте ще раз.';
-                }
+            .then(message => {
+                const currentTime = new Date().toLocaleTimeString(); // Отримуємо поточний час
+                serverResponse.textContent = `Токен успішно оновлено о ${currentTime}! ${message}`;
             })
             .catch(error => {
-                serverResponse.textContent = 'Помилка: ' + error.message; // Відображаємо текст помилки
+                const currentTime = new Date().toLocaleTimeString(); // Отримуємо поточний час при помилці
+                serverResponse.textContent = `Помилка о ${currentTime}: ${error.message}`; // Відображаємо текст помилки
             });
     }
 </script>
